--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,12 @@
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_single_fragment">SingleFragmentActivity</string>
+    <string name="talks_activity_title">Talks</string>
+    
+    <string-array name="left_menu_items">
+        <item>Talks</item>
+        <item>Speakers</item>
+        <item>Sponsors</item>
+    </string-array>
 
 </resources>
