--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,13 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_single_fragment">SingleFragmentActivity</string>
     <string name="talks_activity_title">Talks</string>
-    
+
     <string-array name="left_menu_items">
         <item>Talks</item>
         <item>Speakers</item>
         <item>Sponsors</item>
     </string-array>
+
+    <string name="title_activity_tasks">Tasks</string>
 
 </resources>
