--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,6 @@
         <item>Sponsors</item>
     </string-array>
 
-    <string name="title_activity_tasks">Tasks</string>
+    <string name="title_activity_talk">Talk</string>
 
 </resources>
