Add transition talk name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
 
     <string name="title_activity_talk">Talk</string>
 
+    <string name="transition_talk_name">transition_talk_name</string>
+
 </resources>
