--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_single_fragment">SingleFragmentActivity</string>
     <string name="talks_activity_title">Talks</string>
+    <string name="action_share">Share</string>
 
     <string-array name="left_menu_items">
         <item>Talks</item>
